Major changes and completed last content and listing style for instructions

--- a/about.html
+++ b/about.html
@@ -36,15 +36,19 @@
 
       <div class="collapse navbar-collapse" id="navbarbreathe">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
           <li class="nav-item">
             <a class="nav-link text-dark mx-3 fs-5" href="index.html">Home</a>
           </li>
+
           <li class="nav-item">
             <a class="nav-link text-dark mx-3 fs-5" href="featured.html">Featured</a>
           </li>
+
           <li class="nav-item">
             <a class="nav-link text-dark mx-3 fs-5" href="gallery.html">Gallery</a>
           </li>
+
           <li class="nav-item">
             <div class="dropdown">
               <button class="btn bg-transparent dropdown-toggle text-dark mx-3 fs-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -52,15 +56,17 @@
               </button>
 
               <ul class="dropdown-menu bg-dark">
-                <li><a class="dropdown-item text-white" href="beginner.html">Beginner</a></li>
-                <li><a class="dropdown-item text-white" href="intermediate.html">Intermediate</a></li>
-                <li><a class="dropdown-item text-white" href="advanced.html">Advance</a></li>
+                <li><a class="dropdown-item text-white" href="beginner.html#yogastart">Yoga</a></li>
+                <li><a class="dropdown-item text-white" href="beginner.html#Strength">Strength Training</a></li>
+                <li><a class="dropdown-item text-white" href="beginner.html#Aerobics">Aerobics</a></li>
               </ul>
-            </di>
+            </div>
           </li>
+          
           <li class="nav-item">
-            <a class="nav-link mx-2 active text-bg-light rounded-5 fs-5 pb-3" aria-current="page" href="about.html">About Us</a>
+            <a class="nav-link text-dark mx-3 fs-5" href="about.html">About Us</a>
           </li>
+        </ul>
       </div>
     </nav>
   </div>
