--- a/featured.html
+++ b/featured.html
@@ -53,16 +53,18 @@
               </button>
 
               <ul class="dropdown-menu bg-dark">
-                <li><a class="dropdown-item text-white" href="beginner.html">Beginner</a></li>
-                <li><a class="dropdown-item text-white" href="intermediate.html">Intermediate</a></li>
-                <li><a class="dropdown-item text-white" href="advanced.html">Advance</a></li>
+                <li><a class="dropdown-item text-white" href="beginner.html#yogastart">Yoga</a></li>
+                <li><a class="dropdown-item text-white" href="beginner.html#Strength">Strength Training</a></li>
+                <li><a class="dropdown-item text-white" href="beginner.html#Aerobics">Aerobics</a></li>
               </ul>
-            </di>
+            </div>
           </li>
 
           <li class="nav-item">
             <a class="nav-link text-dark mx-3 fs-5" href="about.html">About Us</a>
           </li>
+
+        </ul>
       </div>
     </nav>
   </div>
@@ -83,7 +85,7 @@
         it can be easy to forget to prioritize your physical 
         and mental wellbeing.
       </p>
-      <a href="beginner.html#yogastart" class="btn btn-dark m-2">Begin your Journey</a>
+      <a href="beginner.html" class="btn btn-dark m-2">Begin your Journey</a>
     </div>
 <!-- RIGHT CONTENT AREA FOR THUMBNAILS  -->
     <div class="card row col-md-4 mt-3">
@@ -113,12 +115,12 @@
       <p class="fs-3">You've decided to take the plunge and start your strength exercise journey. 
         It's exciting, but can be intimidating too. 
         Whether you're a beginner or advanced lifter, the key to success is consistency.</p>
-      <a href="beginner.html" class="btn btn-dark m-2">Begin your Journey</a>
+      <a href="beginner.html#karosel6" class="btn btn-dark m-2">Begin your Journey</a>
     </div>
 <!-- RIGHT CONTENT AREA FOR THUMBNAILS  -->
     <div class="card row col-md-4 mt-3">
       <div class="card-body">
-        <img src="Images/s3.jpeg" class="card-img-top g-0 object-fit-contain border rounded" alt="">
+        <img src="Gallery/lift/ss3.webp" class="card-img-top g-0 object-fit-contain border rounded" alt="">
         <p class="card-text text-bg-dark p-4 fs-4">Weight lifting is an effective and efficient way for 
         individuals to build muscle mass, strength, endurance and confidence
         </p>
@@ -126,7 +128,7 @@
     </div>
     <div class="card row col-md-4 mt-3">
       <div class="card-body">
-        <img src="Images/s4.jpeg" class="card-img-top g-0 object-fit-contain border rounded" alt="">
+        <img src="Images/a2.jpeg" class="card-img-top g-0 object-fit-contain border rounded" alt="">
         <p class="card-text text-bg-dark p-4 fs-4">Compound lifts are more challenging but less time 
           consuming than performing multiple different isolation exercises. 
         </p>
@@ -143,12 +145,12 @@
       <p class="fs-3">Aerobics can be done anytime and anywhere. From the comfort of your own home or workplace, 
         you can enjoy the benefits of aerobic exercise without ever having to leave your chair! 
       </p>
-      <a href="beginner.html" class="btn btn-dark m-2">Begin your Journey</a>
+      <a href="beginner.html#karosel7" class="btn btn-dark m-2">Begin your Journey</a>
     </div>
 <!-- RIGHT CONTENT AREA FOR THUMBNAILS  -->
     <div class="card row col-md-4 mt-3">
       <div class="card-body">
-        <img src="Images/a2.jpeg" class="card-img-top g-0 object-fit-contain border rounded" alt="">
+        <img src="Gallery/aero/mountainclimbers.webp" class="card-img-top g-0 object-fit-contain border rounded" alt="">
         <p class="card-text text-bg-dark p-3 fs-4">Aerobics provide cardiovascular benefits as well 
           as improving physical stamina and flexibility.
         </p>
