--- a/gallery.html
+++ b/gallery.html
@@ -40,12 +40,15 @@
 
       <div class="collapse navbar-collapse" id="navbarbreathe">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
           <li class="nav-item">
             <a class="nav-link text-dark mx-3 fs-5" href="index.html">Home</a>
           </li>
+
           <li class="nav-item">
             <a class="nav-link text-dark mx-3 fs-5" href="featured.html">Featured</a>
           </li>
+
           <li class="nav-item">
             <a class="nav-link active text-bg-light fs-5 rounded-5" aria-current="page" href="gallery.html">Gallery</a>
           </li>
@@ -57,16 +60,18 @@
               </button>
 
               <ul class="dropdown-menu bg-dark">
-                <li><a class="dropdown-item text-white" href="beginner.html">Beginner</a></li>
-                <li><a class="dropdown-item text-white" href="intermediate.html">Intermediate</a></li>
-                <li><a class="dropdown-item text-white" href="advanced.html">Advance</a></li>
+                <li><a class="dropdown-item text-white" href="beginner.html#yogastart">Yoga</a></li>
+                <li><a class="dropdown-item text-white" href="beginner.html#Strength">Strength Training</a></li>
+                <li><a class="dropdown-item text-white" href="beginner.html#Aerobics">Aerobics</a></li>
               </ul>
-            </di>
+            </div>
           </li>
 
           <li class="nav-item">
             <a class="nav-link text-dark mx-3 fs-5" href="about.html">About Us</a>
           </li>
+
+        </ul>
       </div>
     </nav>
   </div>
@@ -88,7 +93,7 @@
    
          <div class="carousel-inner">
            <div class="carousel-item active">
-             <a href="content.html#mountain" style="text-decoration: none; color: white;"><img src="Gallery/yoga/y1b.jpeg" class="d-block w-100" alt="..."></a>
+             <a href="beginner.html#mountain" style="text-decoration: none; color: white;"><img src="Gallery/yoga/y1b.jpeg" class="d-block w-100" alt="A lady with yoga pose"></a>
                <div class="carousel-caption">
                  <h5>Mountain Pose/Tadasana</h5>
                  <p>The mother of all yoga poses</p>
@@ -96,7 +101,7 @@
              </div>
    
            <div class="carousel-item">
-            <a href="content.html#dog" style="text-decoration: none; color: white;"><img src="Gallery/yoga/y2b.jpeg" class="d-block w-100" alt="..."></a>
+            <a href="beginner.html#dog" style="text-decoration: none; color: white;"><img src="Gallery/yoga/y2b.jpeg" class="d-block w-100" alt="A lady with yoga pose"></a>
              <div class="carousel-caption">
                <h5>Downward-Facing Dog</h5>
                <p>(Adho Mukha Svanansana)</p>
@@ -104,7 +109,7 @@
            </div>
    
            <div class="carousel-item">
-            <a href="content.html#war1" style="text-decoration: none; color: white;"><img src="Gallery/yoga/y3b.jpeg" class="d-block w-100" alt="..."></a>
+            <a href="beginner.html#war1" style="text-decoration: none; color: white;"><img src="Gallery/yoga/y3b.jpeg" class="d-block w-100" alt="A lady with yoga pose"></a>
              <div class="carousel-caption">
                <h5>Warrior I</h5>
                <p>The first in the Warrior series</p>
@@ -112,7 +117,7 @@
            </div>
    
            <div class="carousel-item">
-             <a href="content.html#war2" style="text-decoration: none; color: white;"> <img src="Gallery/yoga/y4b.jpeg" class="d-block w-100" alt="..."></a>
+             <a href="beginner.html#war2" style="text-decoration: none; color: white;"><img src="Gallery/yoga/y4b.jpeg" class="d-block w-100" alt="A lady with yoga pose"></a>
              <div class="carousel-caption">
                <h5>Warrior II</h5>
                <p>Similar to Warrior I, Warrior II offers just a slight variation.</p>
@@ -144,34 +149,35 @@
         </div>
   
         <div class="carousel-inner">
+
           <div class="carousel-item active">
-            <img src="Gallery/lift/s5.jpeg" class="d-block w-100 " alt="...">
+            <a href="beginner.html#wallpushup" style="text-decoration: none; color: white;"><img src="Gallery/lift/s8.webp" class="d-block w-100" alt="A man doing wall push-ups"></a>
+            <div class="carousel-caption">
+              <h5>Wall push up</h5>
+              <p>Pump your chest in a wall!</p>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <a href="beginner.html#squat" style="text-decoration: none; color: white;"><img src="Gallery/lift/s1.JPG" class="d-block w-100 " alt="A lady performing squats"></a>
               <div class="carousel-caption">
-                <h5>Dumbell raise</h5>
-                <p>Anywhere you can lift your dumbells </p>
+                <h5>Squat</h5>
+                <p>Take your chances</p>
                </div>
             </div>
   
           <div class="carousel-item">
-            <img src="Gallery/lift/s4.jpeg" class="d-block w-100" alt="...">
+            <a href="beginner.html#reverselunge" style="text-decoration: none; color: white;"><img src="Gallery/lift/ss2.jpeg" class="d-block w-100" alt="Reverse lunge"></a>
             <div class="carousel-caption">
-              <h5>Dumbell bench press</h5>
-              <p>Pump your chest in a bench!</p>
-            </div>
-          </div>
-  
-          <div class="carousel-item">
-            <img src="Gallery/lift/s2.jpeg" class="d-block w-100" alt="...">
-            <div class="carousel-caption">
-              <h5>Dumbell shoulder raise</h5>
+              <h5>Reverse Lunge</h5>
               <p>Take one step at a time</p>
             </div>
           </div>
   
           <div class="carousel-item">
-            <img src="Gallery/lift/s3.jpeg" class="d-block w-100" alt="...">
+            <a href="beginner.html#splitsquat" style="text-decoration: none; color: white;"><img src="Gallery/lift/splitsquat.JPG" class="d-block w-100 height-450" alt="..."></a>
             <div class="carousel-caption">
-              <h5>Bicep Curls</h5>
+              <h5>Split Squat</h5>
               <p>Curve the creation</p>
             </div>
           </div>
@@ -200,15 +206,15 @@
   
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="Gallery/aero/a1.jpeg" class="d-block w-100" alt="...">
+            <a href="beginner.html#jogging" style="text-decoration: none; color: white;"><img src="Gallery/aero/a1.jpeg" class="d-block w-100" alt="Jogging"></a>
               <div class="carousel-caption">
-                <h5>Hula hoop</h5>
-                <p>Twist your body around</p>
+                <h5>Jogging</h5>
+                <p>Jog as you can</p>
                </div>
             </div>
   
           <div class="carousel-item">
-            <img src="Gallery/aero/a2.jpeg" class="d-block w-100" alt="...">
+            <a href="beginner.html#highknee" style="text-decoration: none; color: white;"><img src="Gallery/aero/a2.jpeg" class="d-block w-100" alt="Jogging"></a>
             <div class="carousel-caption">
               <h5>Sweat with a Companion</h5>
               <p>Aerobics can be anywhere as long as you sweat!</p>
@@ -216,15 +222,15 @@
           </div>
   
           <div class="carousel-item">
-            <img src="Gallery/aero/a3.jpeg" class="d-block w-100" alt="...">
+            <a href="beginner.html#jumpingjack" style="text-decoration: none; color: white;"><img src="Gallery/aero/jj_300x450.jpg" class="d-block w-100" alt="jumping"></a>
             <div class="carousel-caption">
-              <h5>Magical Exercise</h5>
+              <h5>Jumping Jacks</h5>
               <p>Bring your own wand and move it around</p>
             </div>
           </div>
   
           <div class="carousel-item">
-            <img src="Gallery/aero/a4.jpeg" class="d-block w-100" alt="...">
+            <a href="beginner.html#walking" style="text-decoration: none; color: white;"><img src="Gallery/aero/a4.jpeg" class="d-block w-100" alt="Walking"></a>
             <div class="carousel-caption">
               <h5>Stretch in the cold</h5>
               <p>No exception! Just Do it!</p>
