--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
               </button>
 
               <ul class="dropdown-menu bg-dark">
-                <li><a class="dropdown-item text-white" href="beginner.html">Beginner</a></li>
-                <li><a class="dropdown-item text-white" href="intermediate.html">Intermediate</a></li>
-                <li><a class="dropdown-item text-white" href="advanced.html">Advance</a></li>
+                <li><a class="dropdown-item text-white" href="beginner.html#yogastart">Yoga</a></li>
+                <li><a class="dropdown-item text-white" href="beginner.html#Strength">Strength Training</a></li>
+                <li><a class="dropdown-item text-white" href="beginner.html#Aerobics">Aerobics</a></li>
               </ul>
-            </di>
+            </div>
           </li>
-
           <li class="nav-item">
             <a class="nav-link text-dark mx-3 fs-5" href="about.html">About Us</a>
           </li>
+        </ul>
       </div>
     </nav>
   </div>
