--- a/featured.html
+++ b/featured.html
@@ -160,7 +160,7 @@
       <div class="card-body">
         <img src="Images/a4.jpeg" class="card-img-top g-0 object-fit-contain border rounded " alt="">
         <p class="card-text text-bg-dark p-3 fs-4"> To maintain a good health or to embrace a healthy
-           lifestyle, an individual needs to keep the body sparkling and strong..
+           lifestyle, an individual needs to keep the body sparkling and strong.
         </p>
       </div>
     </div>
