added mission and vision content

--- a/about.html
+++ b/about.html
@@ -62,17 +62,17 @@
               </ul>
             </div>
           </li>
-          
+
           <li class="nav-item">
-            <a class="nav-link text-dark mx-3 fs-5" href="about.html">About Us</a>
+            <a class="nav-link active text-bg-light mx-3 fs-5 rounded-5" aria-current="page" href="about.html">About Us</a>
           </li>
         </ul>
       </div>
     </nav>
   </div>
 
-  <div class="row col-lg mx-3 bg-dark text-white rounded-4 fs-5">
-    <H2 class="display-1">All about <b>Breathe</b></H2>
+  <div class="row col-lg mx-3 bg-dark text-white rounded-4 fs-5 mt-3">
+    <H2 class="display-1 text-center">All about <b>Breathe</b></H2>
       <p>We all know this era of technology made us busy at all times. 
         People are working 8 hours on their desk in their office or even 
         at home. There are also people that has free time and spend a lot 
@@ -95,6 +95,23 @@
           activities and aerobic exercise which gives my target end user heart and lungs long endurance. 
         </p>
   </div>
+
+  <div class="row col-lg mx-3 bg-dark text-white rounded-4 fs-5 my-3">
+    <H2 class="display-1 text-center"><b>Mission</b></H2>
+      <p>Our mission at Breathe E-Magazine is to empower desk-bound and work-from-home professionals by 
+      providing them with easy-to-follow exercise tips that they can incorporate into their daily routines.
+      Our aim is to help individuals improve their physical health, mental well-being, and overall productivity.
+      </p>
+      <br><br>
+      <H2 class="display-1 text-center"><b>Vision</b></H2>
+      <p>Our vision is to be the go-to source of information for individuals who want to stay fit and healthy 
+        despite their sedentary work lifestyle. We strive to create a community of like-minded individuals who 
+        are passionate about taking care of their bodies and minds. We envision a world where people prioritize 
+        their health and well-being, and where exercise is seen as an essential part of everyone's daily routine.
+
+      </p>
+  </div>
+
 <!-- FOOTER DETAILS FOR IMPROVEMENT -->
     <div class="card text-center bg-dark bg-gradient text-white">
       <div class="card-header h1">
