changed breakpoints from md to lg to ensure proper col will reflect on most devices

--- a/beginner.html
+++ b/beginner.html
@@ -44,7 +44,7 @@ a .dropdown-item:hover{
 </style>
 <body>
   <div class="container" id="Top">
-    <nav class="navbar navbar-expand-md d-flex flex-row-reverse">
+    <nav class="navbar navbar-expand-lg d-flex flex-row-reverse">
       <a href="index.html" class="navbar-brand">
         <img src="Gallery/yoga/brlogomain.jpeg" class="m-3 p-3 img-fluid rounded-5" alt="breathe logo">
       </a>
@@ -88,7 +88,7 @@ a .dropdown-item:hover{
 
   <!-- Top slider for yoga content images -->
 
-  <div id="karosel5" class="carousel slide mx-5 my-3 p-5" data-bs-ride="carousel">
+  <div id="karosel5" class="carousel slide mx-5 my-3 p-1" data-bs-ride="carousel">
 
     <div class="carousel-inner" id="yogaa">
       <div class="carousel-item active" data-bs-interval="3000">
@@ -135,11 +135,11 @@ a .dropdown-item:hover{
   </div>
 
   <div class="row mt-3 text-white bg-dark px-4 border border-light">
-    <div class="col-md-7 text-center">
+    <div class="col-lg-7 text-center">
         <h4 class="pt-2" id="mountain">1. Mountain Pose (Tadasana)</h4>
         <img src="Images/motheryoga.JPG"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-md-5 pt-3">
+    <div class="col-lg-5 pt-3">
       <p>Also known as <i>"The mother of yoga poses"</i> it looks easy. This two-footed stance is the 
         foundation for many other positions that require awareness and balance. It is through this pose
         that one finds the proper alignment and shape for additional movements
@@ -162,11 +162,11 @@ a .dropdown-item:hover{
   </div>
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
-    <div class="col-md-7 text-center">
+    <div class="col-lg-7 text-center">
         <h4 class="pt-2">2. Child’s Pose (Balasana)</h4>
         <img src="Images/balasana.JPG"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-md-5 pt-3">
+    <div class="col-lg-5 pt-3">
       <p>Consider this exercise your reset moment. Simple in design, this easy pose relaxes your nervous 
         system and is a great place to take a breather during class if you need one. Got knee problems? 
         Make sure to lower into this position with extra care.
@@ -186,11 +186,11 @@ a .dropdown-item:hover{
   </div>
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
-    <div class="col-md-7 text-center">
+    <div class="col-lg-7 text-center">
         <h4 class="pt-2">3. Cat/Cow Pose (Marjaryasana to Bitilasana)</h4>
         <img src="Images/cow.JPG"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-md-5 pt-3">
+    <div class="col-lg-5 pt-3">
       <p>Cat/cow is a great way to warm up your back, explains Ingber, and get your body ready for downward-facing
         dog. It also helps address mobility (hello, desk jobs) and work your core without the extra stress on your
           wrists and shoulders that you might feel in a down dog move.
@@ -212,11 +212,11 @@ a .dropdown-item:hover{
   </div>
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
-    <div class="col-md-7 text-center">
+    <div class="col-lg-7 text-center">
         <h4 class="pt-2">4. Corpse Pose (Shavasana)</h4>
         <img src="Images/corpse.JPG"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-md-5 pt-3">
+    <div class="col-lg-5 pt-3">
       <p>Lying around may seem pointless, but this is one of the most meditative moments in any yoga practice. 
         Corpse pose calms the mind, relieves stress and induces a relaxed state. (Why do you think yogis are so chill?)
       </p>
@@ -234,11 +234,11 @@ a .dropdown-item:hover{
   </div>
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
-    <div class="col-md-7 text-center">
+    <div class="col-lg-7 text-center">
         <h4 class="pt-2" id="war1">5. Warrior I (Virabhadrasana I)</h4>
         <img src="Images/warrior1.JPG"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-md-5 pt-3">
+    <div class="col-lg-5 pt-3">
       <p>The first in the Warrior series, this pose strengthens your legs and opens your hips and chest, while also stretching 
       your arms and legs. While holding this exercise, you’ll see an increase in your concentration and balance — both essential 
       qualities to carry through a yoga practice.
@@ -262,11 +262,11 @@ a .dropdown-item:hover{
   </div>
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
-    <div class="col-md-7 text-center">
+    <div class="col-lg-7 text-center">
         <h4 class="pt-2" id="war2">6. Warrior II (Virabhadrasana II)</h4>
         <img src="Images/warrior2.JPG"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-md-5 pt-3">
+    <div class="col-lg-5 pt-3">
       <p>Similar to Warrior I, Warrior II offers just a slight variation, with your upper body rotated to the side instead
         of facing forward. You’ll still reap the same quad-strengthening benefits of Warrior I, but you’ll also open up 
         your hip flexor muscles for greater flexibility.
@@ -285,11 +285,11 @@ a .dropdown-item:hover{
   </div>
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
-    <div class="col-md-7 text-center">
+    <div class="col-lg-7 text-center">
         <h4 class="pt-2" id="dog">7. Downward-Facing Dog (Adho Mukha Svanansana)</h4>
         <img src="Images/doggy.JPG"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-md-5 pt-3">
+    <div class="col-lg-5 pt-3">
       <p>
         One of the most recognizable poses of the bunch, down dog is a great way to stretch your back, shoulders, arms,
         hamstrings and well, just about everything. And it gets you calm and centered, too.
@@ -309,7 +309,7 @@ a .dropdown-item:hover{
   </div>
 
   <!-- another carousel for stregnth content -->
-  <div id="karosel6" class="carousel slide mx-5 my-3 p-5" data-bs-ride="carousel">
+  <div id="karosel6" class="carousel slide mx-5 my-3 p-1" data-bs-ride="carousel">
 
     <div class="carousel-inner" id="strengthstart">
       <div class="carousel-item active" data-bs-interval="3000">
@@ -354,15 +354,15 @@ a .dropdown-item:hover{
   <h3>Don't roll your eyes!</h3>
   </div>
 
-  <div class="row mt-3 text-white bg-dark px-2 border border-light">
-    <div class="col-md-6 text-center">
+  <div class="row mt-3 text-white bg-dark border border-light">
+    <div class="col-lg-7 text-center">
         <h4 class="pt-2" id="wallpushup">Wall push-up "Endless"</h4>
-        <img src="Gallery/lift/str1.JPG"  class="object-fit-contain w-100" alt="">
+        <img src="Gallery/lift/str1.JPG"  class="object-fit-contain w-100 p-4" alt="">
     </div>
-    <div class="col-md-6 pt-3 mt-5 align-content-center">
+    <div class="col-lg-5 p-4">
       <p>
         The wall push-up is an effective variation on the military-esque traditional push-up — which is an advanced 
-        movement, according to Alena Luciani, strength and conditioning specialist and founder of Training2xl.
+        movement.
         
         Similar in execution to the standard push-up, the wall push-up involves shifting your hands from the floor 
         to — you guessed it! — the wall. “By elevating your hand, you decrease the amount of gravity pressing down 
@@ -371,14 +371,12 @@ a .dropdown-item:hover{
 
       <p> <b>How to Do It:</b> 
         <ol>
-          <li>          Stand an arm’s length away from the wall.</li>
-          <li>  Lean forward, planting both palms on the wall so they’re shoulder-width apart.
-          </li>
-          <li>              Think about spreading the wall with your fingers to activate your triceps and lats properly position your elbows.</li>
-          <li>        Simultaneously squeeze your midline, quads, and glutes.</li>
-          <li>        Shoot elbows straight behind you as you lower until your forehead kisses the wall.</li>
-          <li>
-            Press away. </li>
+          <li> Stand an arm’s length away from the wall.</li>
+          <li> Lean forward, planting both palms on the wall so they’re shoulder-width apart.</li>
+          <li> Think about spreading the wall with your fingers to activate your triceps and lats properly position your elbows.</li>
+          <li> Simultaneously squeeze your midline, quads, and glutes.</li>
+          <li> Shoot elbows straight behind you as you lower until your forehead kisses the wall.</li>
+          <li> Press away. </li>
         </ol>
       </p>
 
@@ -389,16 +387,14 @@ a .dropdown-item:hover{
     </div>
   </div>
 
-  <div class="row my-3 text-white bg-dark px-4 border border-light">
-    <div class="col-md-7 text-center">
+  <div class="row text-white bg-dark px-4 border border-light">
+    <div class="col-lg-7 text-center">
         <h4 class="pt-2">2. Superhuman</h4>
         <img src="Gallery/lift/str2.JPG" class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-md-5 pt-3">
+    <div class="col-lg-5 pt-3">
       <p>Known as the Superman before the ~gender revolution~, the superhuman is a super-duper pulling exercise.
-
-        “It’s i-n-c-r-e-d-i-b-l-y important to do some pulling exercises in your workout routine,” says Luciani.
-        
+        It’s i-n-c-r-e-d-i-b-l-y important to do some pulling exercises in your workout routine.
         Most of our day-to-day to-dos, like camping out on the computer and lounging on the lounger, neglect our 
         pulling muscles (back, forearms, traps), which increases the risk of muscle imbalances and, eventually, injury.
       </p>
@@ -420,11 +416,11 @@ a .dropdown-item:hover{
   </div>
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
-    <div class="col-md-7 text-center">
+    <div class="col-lg-7 text-center">
         <h4 class="pt-2" id="reverselunge">3. Reverse lunge</h4>
         <img src="Gallery/lift/str3.JPG"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-md-5 pt-3">
+    <div class="col-lg-5 pt-3">
       <p>This bodyweight move is (almost) as much fun as it sounds. This is one creepy-crawly exercise that will have you 
         feeling like a little kid again while building your triceps, shoulders, chest, abs, glutes, and quads.
       </p>
@@ -440,11 +436,11 @@ a .dropdown-item:hover{
   </div>
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
-    <div class="col-md-7 text-center">
+    <div class="col-lg-7 text-center">
         <h4 class="pt-2" id="splitsquat">4. Split squat</h4>
         <img src="Gallery/lift/str4.JPG" class="object-fit-contain w-100 p-2" alt="splitsquatter">
     </div>
-    <div class="col-md-5 pt-3">
+    <div class="col-lg-5 pt-3">
       <p>Mastered the reverse lunge? Congrats! Time to advance to the split squat, the reverse lunge’s feistier cousin.
 
         Split squats work the same muscles as lunges (quads, glutes, calves, core, hamstrings). But because split squats require 
@@ -470,11 +466,11 @@ a .dropdown-item:hover{
   </div>
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
-    <div class="col-md-7 text-center">
+    <div class="col-lg-7 text-center">
         <h4 class="pt-2" id="squat">5. Squat (Explosives)</h4>
         <img src="Gallery/lift/Squat.JPG"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-md-5 pt-3">
+    <div class="col-lg-5 pt-3">
       <p>Squats are popular with weightlifters, which can lead to the misperception that they can be done only with weights. 
         But even squatting with your bodyweight alone can give you strong leg muscles if you do it with good form. 
       </p>
@@ -495,11 +491,11 @@ a .dropdown-item:hover{
   </div>
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
-    <div class="col-md-7 text-center">
+    <div class="col-lg-7 text-center">
         <h4 class="pt-2">6. Hollow Hold</h4>
         <img src="Gallery/lift/hollowhold.JPG"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-md-5 pt-3">
+    <div class="col-lg-5 pt-3">
       <p>Quick: Picture a banana on a table. Got it? Great — you’ve basically got the gist of the hollow hold.
         But don’t let the fruit reference fool you. This movement gets spicy QUICK. It’s super good for strengthening your midsection.
         <br><br>
@@ -523,11 +519,11 @@ a .dropdown-item:hover{
   </div>
 
   <div class="row my-3 text-white bg-dark px-4 border border-light">
-    <div class="col-md-7 text-center">
+    <div class="col-lg-7 text-center">
         <h4 class="pt-2">7. Curl-Ups</h4>
         <img src="Gallery/lift/curlups.jpeg"  class="object-fit-contain w-100 p-2" alt="">
     </div>
-    <div class="col-md-5 pt-3">
+    <div class="col-lg-5 pt-3">
       <p>
         Do you want to put your abdominal strength to the test? The curl-up abdominal test is a great way to assess abdominal strength and endurance, 
         and it requires little to no equipment. 
@@ -552,7 +548,7 @@ a .dropdown-item:hover{
   </div>
 
   <!-- carousel slider for aerobics content -->
-  <div id="karosel7" class="carousel slide mx-5 my-3 p-5" data-bs-ride="carousel">
+  <div id="karosel7" class="carousel slide mx-5 my-3 p-1" data-bs-ride="carousel">
 
     <div class="carousel-inner" id="aerostart">
       <div class="carousel-item active" data-bs-interval="3000">
@@ -598,11 +594,11 @@ a .dropdown-item:hover{
   </div>
 
   <div class="row mt-3 text-white bg-dark px-2 border border-light">
-    <div class="col-md-6 text-center">
+    <div class="col-lg-6 text-center">
         <h4 class="pt-2" id="jogging">1. Jogging</h4>
         <img src="Gallery/aero/jogging.jpeg"  class="object-fit-contain w-100" alt="">
     </div>
-    <div class="col-md-6 pt-3 mt-3 align-content-center">
+    <div class="col-lg-6 pt-3 mt-3 align-content-center">
       <p>
         If you want to elevate your jogging, it’s important to take a look at your jogging form and make
         any necessary adjustments and improvements. This will help reduce chance of injury, increase speed,
@@ -626,11 +622,11 @@ a .dropdown-item:hover{
   </div>
 
   <div class="row mt-3 text-white bg-dark px-2 border border-light">
-    <div class="col-md-6 text-center">
+    <div class="col-lg-6 text-center">
         <h4 class="pt-2" id="highknee">2. High Knees</h4>
         <img src="Gallery/aero/highknee.jpg"  class="object-fit-contain w-100" alt="">
     </div>
-    <div class="col-md-6 pt-3 mt-3 align-content-center">
+    <div class="col-lg-6 pt-3 mt-3 align-content-center">
       <p>
         High Knees are a cardio-intensive exercise performed at a fast pace. It engages your core, strengthens 
         all the muscles in your legs, gets your heart rate up and improves momentum, coordination and flexibility.
@@ -655,11 +651,11 @@ a .dropdown-item:hover{
   </div>
 
   <div class="row mt-3 text-white bg-dark px-2 border border-light">
-    <div class="col-md-6 text-center">
+    <div class="col-lg-6 text-center">
         <h4 class="pt-2" id="highknee">3. Mountain Climbers</h4>
         <img src="Gallery/aero/mountaineer.jpg"  class="object-fit-contain w-100" alt="">
     </div>
-    <div class="col-md-6 pt-3 mt-3 align-content-center">
+    <div class="col-lg-6 pt-3 mt-3 align-content-center">
       <p>
        Also known as Running planks.
        Climbing a mountain would be a daunting workout to most, but what if the mountain is the floor? That's the concept 
@@ -681,11 +677,11 @@ a .dropdown-item:hover{
   </div>
 
   <div class="row mt-3 text-white bg-dark px-2 border border-light">
-    <div class="col-md-6 text-center">
+    <div class="col-lg-6 text-center">
         <h4 class="pt-2" id="jumpingjack">4. Jumping Jacks</h4>
         <img src="Gallery/aero/jumpingjacks.png"  class="object-fit-contain w-100" alt="">
     </div>
-    <div class="col-md-6 pt-3 mt-3 align-content-center">
+    <div class="col-lg-6 pt-3 mt-3 align-content-center">
       <p>
         Jumping jacks are a great full body exercise that enhances aerobic fitness, strengthens the body, and promotes relaxation. 
         This exercise also improves muscle endurance, increases the body’s metabolic rate, and helps with weight loss.
@@ -705,11 +701,11 @@ a .dropdown-item:hover{
   </div>
 
   <div class="row mt-3 text-white bg-dark px-2 border border-light">
-    <div class="col-md-6 text-center">
+    <div class="col-lg-6 text-center">
         <h4 class="pt-2">5. Zumba dance </h4>
         <img src="Gallery/aero/zumba.jpg"  class="object-fit-contain w-100" alt="">
     </div>
-    <div class="col-md-6 pt-3 mt-3 align-content-center">
+    <div class="col-lg-6 pt-3 mt-3 align-content-center">
       <p>
         Zumba is beneficial for heart health, improves coordination, tones your entire body, and may help relieve stress. 
         If you like to dance, Zumba is a fun choice for an aerobic workout. After warming up, your Zumba video will 
@@ -728,11 +724,11 @@ a .dropdown-item:hover{
   </div>
 
   <div class="row mt-3 text-white bg-dark px-2 border border-light">
-    <div class="col-md-6 text-center">
+    <div class="col-lg-6 text-center">
         <h4 class="pt-2">6. Stationary Cycling</h4>
         <img src="Gallery/aero/station.jpg"  class="object-fit-contain w-100" alt="">
     </div>
-    <div class="col-md-6 pt-3 mt-3 align-content-center">
+    <div class="col-lg-6 pt-3 mt-3 align-content-center">
       <p>
         Riding a stationary exercise bike is an efficient and effective way to burn calories and body fat while strengthening your heart, lungs, and muscles.
         Compared to some other types of cardio equipment, a stationary bicycle puts less stress on your joints, but it still provides an excellent aerobic workout.
@@ -759,11 +755,11 @@ a .dropdown-item:hover{
   </div>
 
   <div class="row mt-3 text-white bg-dark px-2 border border-light my-2">
-    <div class="col-md-6 text-center">
+    <div class="col-lg-6 text-center">
         <h4 class="pt-2" id="walking">7. Walking? Yes Walking!</h4>
         <img src="Gallery/aero/walking.webp"  class="object-fit-contain w-100" alt="">
     </div>
-    <div class="col-md-6 pt-3 mt-3 align-content-center">
+    <div class="col-lg-6 pt-3 mt-3 align-content-center">
       <p>
         Walking may be the simplest way to work out. You can do it almost anywhere, 
         and it’s a snap to get started: Just put one foot in front of the other.
