--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <h2 class="display-3">Fuel Your Workday with Exercise!</h2>
         <p class="fs-3 pt-2">Breathe offers fitness guidance for desk workers or those on the go. 
           Aerobic exercices at the office, strength training you can do at home or anytime all 
-          easily accessible from your laptop.
+          easily accessible from your smart devices.
           <br><br>
           These days, we all need to look our best and stay fit. That’s why Yoga, Weight Lifting, 
           and Aerobics are becoming popular activities among health and fitness minded individuals.
